# constructionOfSoftware

./: CMakeLists.txt  ExerciseFileTest.cpp  ExerciseFileTester.h  OperationBase.cpp  OperationBase.h  Readme.md  addoperation.cpp  addoperation.h  binaryequals.cpp  binaryequals.h  exercise.cpp  exercise.h  exercisesheet.cpp  exercisesheet.h  generate.cpp  generate.h  judgement.cpp  judgement.h  main.cpp  practice.cpp  practice.h  suboperation.cpp  suboperation.h
